<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="35sp"
        android:fontFamily="@font/amsterdam"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:text="@string/instagram"/>
    
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username_hint"
        android:textColorHint="#555"
        android:inputType="text"
        android:textColor="#000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"/>


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password_hint"
        android:textColorHint="#555"
        android:textColor="#000"
        android:drawableRight="@drawable/ic_eye"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:onClick="onForgotDetailsClicked"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textSize="20sp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_if_square_facebook"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_margin="0dp"-->
<!--        android:layout_gravity="bottom|end">-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/account"
            android:onClick="onSignUpClicked"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:background="@color/pink_light"
            android:gravity="center"
            android:layout_gravity="bottom|end"/>

<!--    </LinearLayout>-->









</LinearLayout>